04/04/2010: Version 0.1.3
    - Computer's pieces left are shown on the right side of the board
    - Current score is shown on the status bar at all times
    - Correct version shown on the AboutDialog when help->About is pressed
    - Editing piece area shows a circle sorrounding the selected piece
    - More refactoring done on the GUI code

26/03/2010: Version 0.1.2
    - The ugly buttons that used to represent pieces have been changed by 
      real (and beautiful) pieces.
    - Ghost pieces on the board were kept painted even when the mouse
      pointer had left the board drawing area. That has been fixed.
    - Icon added to the executable file in the windows version. 
    - Part of the gui code has been refactored (there's a lot of work left)

19/03/2010: Version 0.1.1
    - pthread dependecy has been moved to gthread.
    - Port to windows done. Code compiles in both linux and windows.
    - Unhandled menus in GUI are now blurred so the user can't select them.

04/02/2010: Version 0.1.0
    - This is the first release of this project.
    - At the moment it contains a fully functional 1vs1 game based on the 
      board game blokus (http://blokus.com).
    - 1vs1 means man versus computer, where the computer moves are calculated
      by a simple (and a bit foolish) heuristic.
    - It can be compiled and installed using the well-known autotools.
    - There's still a long way to walk on this project. Have a look at the
      document TODO for a small snapshot of it.