@@ -1,3 +1,11 @@
+now: Version current
+    - Added stopwatch to measure how long computer and human take to move
+    - Computer player doesn't process the next move so hard if it already 
+      managed to block completely the human user (it was a bit tedious to wait
+      before)
+    - Added a bit of randomness to the starting move when the computer player
+      starts. What is life without randomness after all? 
+
 04/04/2010: Version 0.1.3
     - Computer's pieces left are shown on the right side of the board
     - Current score is shown on the status bar at all times
